--- a/_layouts/collection_list.html
+++ b/_layouts/collection_list.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>{{ page.title }}</h1>
 <div style="display: flex; flex-wrap: wrap; gap: 1rem">
-  {% assign label = page.label %} {% for item in site.collections %} {% if item.label == label %}
+  {% assign label = page.label %} {% for item in site.datacollections %} {% if item.label == label %}
   <div style="border: 1px solid #ddd; padding: 1rem; width: 300px">
     <img src="{{ item.image }}" alt="{{ item.name }}" style="max-width: 100%" />
     <h2>{{ item.name }}</h2>
