--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,13 +13,35 @@
   <!-- Favicon, fonts, dsb -->
 </head>
 <body>
-  <header>
-    <h1><a href="{{ '/' | relative_url }}">{{ site.title | escape }}</a></h1>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/collections">Collections</a>
-      <a href="/about">About</a>
-    </nav>
+  <div class="has fixed bg-white h-2 z-5 top-0 max-w-[inherit] mx-auto my-0 inset-x-2 sm:inset-x-0"></div>
+  <header class="mb-5">
+    <div class="fixed border z-5 max-w-580 mx-auto p-2 rounded-xl border-solid top-2 inset-x-2 border-transparent">
+      <div class="flex justify-between">
+        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white">
+          <svg class="w-5 h-5 fill-current" width="100%" height="100%"><use xlink:href="#i.back"></use></svg>
+        </button>
+        <div class="hidden"><img class="w-10 h-10 rounded-full" src="/src/assets/image/himwears.png" /></div>
+        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white">
+          <svg class="w-5 h-5 fill-current" width="100%" height="100%"><use xlink:href="#i.search"></use></svg>
+        </button>
+      </div>
+      <div class="hidden flex place-center">
+        <form class="flex flex-1 items-center gap-[15px] border bg-white h-10 px-2.5 py-0 rounded-xl border-solid mr-3">
+          <input class="w-full h-full text-sm bg-transparent p-0 border-0 focus:outline-none" placeholder="Cari produk.." /><button
+            class="hidden text-xs cursor-pointer"
+            type="button"
+          >
+            Clear
+          </button>
+        </form>
+        <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white">
+          <svg class="w-5 h-5 fill-current" width="100%" height="100%"><use xlink:href="#i.close"></use></svg>
+        </button>
+      </div>
+    </div>
+    <div class="w-full h-44 bg-gray-300 rounded-xl text-center p-2 flex flex-col items-center justify-end">
+      <div class="p-2 md:px-0"><img class="bg-gray-200 w-full rounded-xl h-44 object-cover" src="/src/assets/image/1705471739.png" alt="undefined" /></div>
+    </div>
   </header>
 
   <main>{{ content }}</main>
