--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white">
           <svg class="w-5 h-5 fill-current" width="100%" height="100%"><use xlink:href="#i.back"></use></svg>
         </button>
-        <div class="hidden"><img class="w-10 h-10 rounded-full" src="/src/assets/image/himwears.png" /></div>
+        <div class="hidden"><img class="w-10 h-10 rounded-full" src="/assets/images/himwears.png" /></div>
         <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white">
           <svg class="w-5 h-5 fill-current" width="100%" height="100%"><use xlink:href="#i.search"></use></svg>
         </button>
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="w-full h-44 bg-gray-300 rounded-xl text-center p-2 flex flex-col items-center justify-end">
-      <div class="p-2 md:px-0"><img class="bg-gray-200 w-full rounded-xl h-44 object-cover" src="/src/assets/image/1705471739.png" alt="undefined" /></div>
+      <div class="p-2 md:px-0"><img class="bg-gray-200 w-full rounded-xl h-44 object-cover" src="/assets/images/1705471739.png" alt="undefined" /></div>
     </div>
   </header>
 
