--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,4 +49,73 @@
   <footer>
     <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
   </footer>
+
+  <svg class="hidden">
+    <symbol id="i.s.tiktok" viewBox="0 0 448 512">
+      <path
+        d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z"
+      ></path>
+    </symbol>
+    <symbol id="i.s.instagram" viewBox="0 0 420 419.997">
+      <path
+        d="M388.818,146.28a24.3,24.3,0,1,1-24.295-24.295A24.3,24.3,0,0,1,388.818,146.28ZM466,256l-0.005.306-1.38,88.105a121.58,121.58,0,0,1-120.2,120.2L256,466l-0.306-.006-88.105-1.376a121.586,121.586,0,0,1-120.206-120.2L46,256l0.006-.306,1.376-88.108a121.59,121.59,0,0,1,120.206-120.2L256,46l0.306,0.006,88.105,1.376a121.584,121.584,0,0,1,120.2,120.2Zm-39.112,0-1.374-87.8A82.654,82.654,0,0,0,343.8,86.485L256,85.114l-87.8,1.371A82.658,82.658,0,0,0,86.484,168.2L85.113,256l1.371,87.8A82.655,82.655,0,0,0,168.2,425.515l87.8,1.371,87.8-1.371A82.651,82.651,0,0,0,425.514,343.8Zm-63.048,0A107.841,107.841,0,1,1,256,148.159,107.962,107.962,0,0,1,363.84,256Zm-39.107,0A68.734,68.734,0,1,0,256,324.734,68.812,68.812,0,0,0,324.732,256Z"
+        transform="translate(-46 -46.001)"
+      ></path>
+    </symbol>
+    <symbol id="i.check">
+      <path
+        d="M12 3c7.2 0 9 1.8 9 9s-1.8 9-9 9s-9-1.8-9-9s1.8-9 9-9"
+        fill="none"
+        stroke="currentColor"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="1.5"
+      ></path>
+    </symbol>
+    <symbol id="i.facebook" viewBox="0 0 32 32">
+      <path
+        d="M24,3H8A5,5,0,0,0,3,8V24a5,5,0,0,0,5,5H24a5,5,0,0,0,5-5V8A5,5,0,0,0,24,3Zm3,21a3,3,0,0,1-3,3H17V18h4a1,1,0,0,0,0-2H17V14a2,2,0,0,1,2-2h2a1,1,0,0,0,0-2H19a4,4,0,0,0-4,4v2H12a1,1,0,0,0,0,2h3v9H8a3,3,0,0,1-3-3V8A3,3,0,0,1,8,5H24a3,3,0,0,1,3,3Z"
+      ></path>
+    </symbol>
+    <symbol id="i.crown" viewBox="0 0 128 128">
+      <path
+        d="M33.812 85.2966L23.3102 43.242C23.1994 42.7984 23.6897 42.4488 24.073 42.6981 35.1549 49.908 49.9261 47.3147 57.8893 36.7611L64.4999 28 71.1105 36.761C79.0737 47.3146 93.845 49.908 104.927 42.6981 105.31 42.4488 105.801 42.7984 105.69 43.242L95.1878 85.2966C95.09 85.6882 94.6983 85.931 94.3041 85.8442 74.6694 81.5244 54.3304 81.5244 34.6958 85.8442 34.3015 85.931 33.9099 85.6882 33.812 85.2966zM34.6816 100.241C54.3256 95.9195 74.6743 95.9195 94.3182 100.241"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="7"
+      ></path>
+    </symbol>
+    <symbol fill="none" id="i.fire" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+      <path
+        d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.047 8.287 8.287 0 0 0 9 9.601a8.983 8.983 0 0 1 3.361-6.867 8.21 8.21 0 0 0 3 2.48Z"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      ></path>
+      <path
+        d="M12 18a3.75 3.75 0 0 0 .495-7.468 5.99 5.99 0 0 0-1.925 3.547 5.975 5.975 0 0 1-2.133-1.001A3.75 3.75 0 0 0 12 18Z"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      ></path>
+    </symbol>
+    <symbol id="i.rating" viewBox="0 0 24 24">
+      <path
+        d="M12,3C10,3,9.8,6.5,8.6,7.8s-5-.2-5.5,2,2.8,3,3.2,4.9-1.6,4.6.2,6S10.1,19,12,19s3.8,3,5.5,1.7-.3-4.1.2-6,3.8-2.6,3.2-4.9-4.2-.7-5.5-2S14,3,12,3Z"
+        fill="#f8b704"
+      ></path>
+    </symbol>
+    <symbol id="i.bookmark" viewBox="0 0 24 24">
+      <g transform="translate(0, 1)">
+        <path
+          d="M12,21l-.18,0A14.15,14.15,0,0,1,5.3,17.29a11.61,11.61,0,0,1-3-5.26,10.27,10.27,0,0,1-.22-4.18,6.15,6.15,0,0,1,1.41-3.2A5.44,5.44,0,0,1,9.8,3.52a5.34,5.34,0,0,1,2.07,1.64c0,.06.09.12.13.19s.09-.13.13-.19A5.27,5.27,0,0,1,14.2,3.52a5.44,5.44,0,0,1,6.27,1.13,6.18,6.18,0,0,1,1.41,3.2A10.27,10.27,0,0,1,21.66,12a11.61,11.61,0,0,1-3,5.26A14.15,14.15,0,0,1,12.18,21Z"
+          fill="currentColor"
+        ></path>
+      </g>
+    </symbol>
+    <symbol id="i.back" viewBox="0 0 24 24">
+      <path
+        d="M15.67,23a1.57,1.57,0,0,1-1.22-.58L6.86,13a1.56,1.56,0,0,1,0-2l7.86-9.43a1.57,1.57,0,1,1,2.42,2l-7,8.42,6.79,8.42A1.57,1.57,0,0,1,15.67,23Z"
+      ></path>
+    </symbol>
+  </svg>
 </body>
