add class .body

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
   <!-- Favicon, fonts, dsb -->
 </head>
-<body>
+<body class="p-2 sm:px-0 max-w-580 mx-auto">
   <div class="has fixed bg-white h-2 z-5 top-0 max-w-[inherit] mx-auto my-0 inset-x-2 sm:inset-x-0"></div>
   <header class="mb-5">
     <div class="fixed border z-5 max-w-580 mx-auto p-2 rounded-xl border-solid top-2 inset-x-2 border-transparent">
