--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <!-- <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}" /> -->
   <!-- ✅ Tambahkan custom CSS kamu di bawah sini -->
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" />
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
 
   <!-- Favicon, fonts, dsb -->
 </head>
