--- a/_includes/collections_list.html
+++ b/_includes/collections_list.html
@@ -28,5 +28,5 @@
       <span class="font-semibold text-sm text-center absolute bg-white m-1 p-1 rounded-md bottom-0 inset-x-0">$79.99</span>
     </div>
   </div>
-  <a class="absolute h-full w-full inset-0" href="/?collection/chosen-by-our-experts"></a>
+  <a class="absolute h-full w-full inset-0" href="/collections/{{ collection_id }}"></a>
 </div>
