--- a/_includes/collections_list.html
+++ b/_includes/collections_list.html
@@ -2,6 +2,7 @@
 
 <div class="sectionItem" id="{{ include.collection_id }}">
   <h2>Produk untuk koleksi: {{ include.collection_id }}</h2>
+  <p>Produk untuk koleksi: {{ include.products }}</p>
 
   <div class="grid grid-cols-3 gap-2">
     {% for product in include.products %}
