--- a/_layouts/collection_list.html
+++ b/_layouts/collection_list.html
@@ -11,45 +11,49 @@ layout: default
 </div>
 
 <div class="grid grid-cols-2 gap-3 sm:grid-cols-3">
-  {% assign category = page.category %} {% assign products = site.data.products | where: "category", category %} {% if products.size > 0 %} {% for product in
-  products %}
-  <div class="relative rounded-xl overflow-hidden p-1 border border-gray-200 hover:border-gray-300">
-    <div class="relative">
-      <div class="card-deco-img relative overflow-hidden aspect-square rounded-lg bg-gray-100">
-        <img class="object-cover" alt="{{ product.name }}" src="{{ product.image | relative_url }}" loading="lazy" />
-      </div>
-      <button
-        class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-1"
-      >
-        <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.bookmark"></use></svg>
-      </button>
-      <span class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 left-1 top-1">
-        <svg class="w-3.5 h-3.5 opacity-70" width="100%" height="100%"><use xlink:href="#i.rating"></use></svg>
-        <span class="ml-1">{{ product.rating }}</span></span
-      ><span
-        class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 w-16 justify-center right-1 bottom-1"
-        >{{ product.code }}</span
-      >
-      <div class="card-deco-img-bar"></div>
-    </div>
-    <div class="p-1 -mt-4">
-      <div class="relative font-heading w-[calc(100%-4.5rem)] text-xxs text-gray-500 mb-1.5">Terjual {{ product.sales }}</div>
-      <a class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" href="//" target="_blank">{{ product.name }}</a>
-      <div class="font-bold text-gray-900">{{ product.price }}</div>
-    </div>
-  </div>
+  {% assign category = page.category %}
+  {% assign this_products = site.data.products | where: "id", category | first %}
 
-  <!-- <div style="border: 1px solid #ddd; padding: 1rem; width: 300px">
-    <img src="{{ product.image | relative_url }}" alt="{{ product.name }}" style="max-width: 100%" />
-    <h2>{{ product.name }}</h2>
-    <p><strong>Code:</strong> {{ product.code }}</p>
-    <p><strong>Label:</strong> {{ product.label }}</p>
-    <p><strong>Rating:</strong> ⭐ {{ product.rating }}</p>
-    <p><strong>Price:</strong> {{ product.price }}</p>
-    <p><strong>Sales:</strong> {{ product.sales }} sold</p>
-    <a href="{{ product.link }}" target="_blank">Lihat Produk</a>
-  </div> -->
-  {% endfor %} {% else %}
-  <p>Tidak ada produk di kategori ini.</p>
+    {% if this_products.products.size > 0 %}
+      {% for product in this_products.products %}
+        <div class="relative rounded-xl overflow-hidden p-1 border border-gray-200 hover:border-gray-300">
+          <div class="relative">
+            <div class="card-deco-img relative overflow-hidden aspect-square rounded-lg bg-gray-100">
+              <img class="object-cover" alt="{{ product.name }}" src="{{ product.image | relative_url }}" loading="lazy" />
+            </div>
+            <button
+              class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-1"
+            >
+              <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.bookmark"></use></svg>
+            </button>
+            <span class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 left-1 top-1">
+              <svg class="w-3.5 h-3.5 opacity-70" width="100%" height="100%"><use xlink:href="#i.rating"></use></svg>
+              <span class="ml-1">{{ product.rating }}</span></span
+            ><span
+              class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 w-16 justify-center right-1 bottom-1"
+              >{{ product.code }}</span
+            >
+            <div class="card-deco-img-bar"></div>
+          </div>
+          <div class="p-1 -mt-4">
+            <div class="relative font-heading w-[calc(100%-4.5rem)] text-xxs text-gray-500 mb-1.5">Terjual {{ product.sales }}</div>
+            <a class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" href="//" target="_blank">{{ product.name }}</a>
+            <div class="font-bold text-gray-900">{{ product.price }}</div>
+          </div>
+        </div>
+
+        <!-- <div style="border: 1px solid #ddd; padding: 1rem; width: 300px">
+          <img src="{{ product.image | relative_url }}" alt="{{ product.name }}" style="max-width: 100%" />
+          <h2>{{ product.name }}</h2>
+          <p><strong>Code:</strong> {{ product.code }}</p>
+          <p><strong>Label:</strong> {{ product.label }}</p>
+          <p><strong>Rating:</strong> ⭐ {{ product.rating }}</p>
+          <p><strong>Price:</strong> {{ product.price }}</p>
+          <p><strong>Sales:</strong> {{ product.sales }} sold</p>
+          <a href="{{ product.link }}" target="_blank">Lihat Produk</a>
+        </div> -->
+      {% endfor %}
+    {% else %}
+    <p>Tidak ada produk di kategori ini.</p>
   {% endif %}
 </div>
