--- a/_includes/collections_list.html
+++ b/_includes/collections_list.html
@@ -1,19 +1,3 @@
-<p>DEBUG: collection_id = {{ include.collection_id }}</p>
-
-<div class="sectionItem" id="{{ include.collection_id }}">
-  <h2>{{ include.title }}</h2>
-  <div class="product-list">
-    {% for product in include.products %}
-      <div class="product-card">
-        <img src="{{ product.image }}" alt="{{ product.name }}">
-        <h3>{{ product.name }}</h3>
-        <p>{{ product.price }}</p>
-        <p>Rating: {{ product.rating }} | Sales: {{ product.sales }}</p>
-      </div>
-    {% endfor %}
-  </div>
-</div>
-
 <div class="sectionItem relative bg-white rounded-xl p-4 mb-5 border" id="{{ include.collection_id }}">
   <div class="flex items-center mb-4">
     <div class="relative mr-3">
@@ -23,7 +7,7 @@
       </div>
     </div>
     <div class="">
-      <h2 class="text-xl font-bold">Featured Products gegegegeg</h2>
+      <h2 class="text-xl font-bold">{{ include.title }}</h2>
       <span class="text-gray-500 flex items-center text-sm">
         <svg class="w-4 h-4 me-1.5 stroke-gray-500" width="100%" height="100%"><use xlink:href="#i.fire"></use></svg>
         9 Products
@@ -31,18 +15,12 @@
     </div>
   </div>
   <div class="grid grid-cols-3 gap-2">
-    <div class="relative bg-gray-200 rounded-lg aspect-square overflow-hidden">
-      <img class="w-full h-full object-cover" alt="CIRCUIT MODUL POWER BANK LCD USB 5V 2.4A FAST CHARGER" src="/src/assets/image/1.webp" />
-      <span class="font-semibold text-sm text-center absolute bg-white m-1 p-1 rounded-md bottom-0 inset-x-0">$59.99</span>
-    </div>
-    <div class="relative bg-gray-200 rounded-lg aspect-square overflow-hidden">
-      <img class="w-full h-full object-cover" alt="Soundcore by Anker R50i NC" src="/src/assets/image/1.webp" />
-      <span class="font-semibold text-sm text-center absolute bg-white m-1 p-1 rounded-md bottom-0 inset-x-0">$59.99</span>
-    </div>
-    <div class="relative bg-gray-200 rounded-lg aspect-square overflow-hidden">
-      <img class="w-full h-full object-cover" alt="Ellipsesinc - Kaos Oversize Pria Wanita Polos" src="/src/assets/image/2.webp" />
-      <span class="font-semibold text-sm text-center absolute bg-white m-1 p-1 rounded-md bottom-0 inset-x-0">$79.99</span>
-    </div>
+    {% for product in include.products %}
+      <div class="relative bg-gray-200 rounded-lg aspect-square overflow-hidden">
+        <img class="w-full h-full object-cover" src="{{ product.image }}" alt="{{ product.name }}"/>
+        <span class="font-semibold text-sm text-center absolute bg-white m-1 p-1 rounded-md bottom-0 inset-x-0">{{ product.price }}</span>
+      </div>
+    {% endfor %}
   </div>
   <a class="absolute h-full w-full inset-0" href="/collections/{{ include.collection_id }}"></a>
 </div>
