--- a/_includes/collections_list.html
+++ b/_includes/collections_list.html
@@ -1,4 +1,4 @@
-<div class="sectionItem relative bg-white rounded-xl p-4 mb-5 border" id="{{ include.collection_id }}">
+<div class="sectionItem relative bg-white rounded-xl p-4 mb-5 border" id="{{ include.collection_id }}" data-collection-id="{{ include.collection_id }}" data-collection-title="{{ include.title }}">
   <div class="flex items-center mb-4">
     <div class="relative mr-3">
       <div class="bg-gray-200 rounded-full w-14 h-14 flex place-center"><span class="font-bold text-2xl">B</span></div>
