--- a/_layouts/collection_list.html
+++ b/_layouts/collection_list.html
@@ -37,7 +37,8 @@ layout: default
           </div>
           <div class="p-1 -mt-4">
             <div class="relative font-heading w-[calc(100%-4.5rem)] text-xxs text-gray-500 mb-1.5">Terjual {{ product.sales }}</div>
-            <a class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" href="//" target="_blank">{{ product.name }}</a>
+            <!-- <a class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" href="//" target="_blank">{{ product.name }}</a> -->
+            <span class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" data-js="product:modal" data-link='{{ product.link | jsonify }}'>{{ product.name }}</span>
             <div class="font-bold text-gray-900">{{ product.price }}</div>
           </div>
         </div>
