--- a/_layouts/collection_list.html
+++ b/_layouts/collection_list.html
@@ -16,7 +16,7 @@ layout: default
 
     {% if this_products.products.size > 0 %}
       {% for product in this_products.products %}
-        <div class="relative rounded-xl overflow-hidden p-1 border border-gray-200 hover:border-gray-300">
+        <div class="relative rounded-xl overflow-hidden p-1 border bg-white border-gray-200 hover:border-gray-300" id="{{ product.code }}">
           <div class="relative">
             <div class="card-deco-img relative overflow-hidden aspect-square rounded-lg bg-gray-100">
               <img class="object-cover" alt="{{ product.name }}" src="{{ product.image | relative_url }}" loading="lazy" />
@@ -38,7 +38,7 @@ layout: default
           <div class="p-1 -mt-4">
             <div class="relative font-heading w-[calc(100%-4.5rem)] text-xxs text-gray-500 mb-1.5">Terjual {{ product.sales }}</div>
             <!-- <a class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" href="//" target="_blank">{{ product.name }}</a> -->
-            <span class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" data-js="product:modal" data-link='{{ product.link | jsonify }}'>{{ product.name }}</span>
+            <span class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" data-js="product:modal" data-link='{{ product.link | jsonify }}' data-id="{{ product.code }}">{{ product.name }}</span>
             <div class="font-bold text-gray-900">{{ product.price }}</div>
           </div>
         </div>
