--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,5 @@
 <head>
+  <script src="https://cdn.tailwindcss.com"></script>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -85,30 +86,38 @@
   </footer>
 
   <style>
-      /* [ inModal ] */ .inModal{display:flex;align-items:center;position:fixed;left:0;right:0;bottom:0;margin-bottom:-100%;z-index:20;transition:var(--trans-1);height:100%;opacity:0;visibility:hidden}.inModal.--open{margin-bottom:0;opacity:1;visibility:visible}.inModal__container{width:100%;max-width:540px;max-height:calc(100% - 60px);border-radius:12px;transition:inherit;z-index:3;display:flex;overflow:hidden;position:relative;margin:0 auto;box-shadow:0 5px 30px 0 rgba(0,0,0,.05);background-color:white;outline:4px solid white;border:1px solid #e5e7eb}.inModal__overlay{display:block;position:fixed;top:0;left:0;right:0;bottom:0;z-index:1;transition:var(--trans-1);background:transparent;opacity:0;visibility:hidden}.inModal.--open .inModal__overlay{opacity:1;visibility:visible;background-color:rgba(0,0,0,.3)}.inModal__box{width:100%;overflow:hidden}.inModal__header{display:flex;gap:15px;background:inherit;align-items:center;border-bottom:1px solid #e5e7eb;justify-content:space-between;padding:15px;background-image:radial-gradient(#e5e7eb 1px,transparent 1px),radial-gradient(#e5e7eb 1px,rgb(255 255 255) 1px);background-position:0 0,6px 6px;background-size:12px 12px}.inModal__header-title{background-color:white;font-weight:600}.inModal__header-close{width:26px;height:26px;display:flex;justify-content:center;align-items:center;border:1px solid #e5e7eb;border-radius:6px;background-color:white;font-size:13px;font-weight:bold;cursor:pointer}.inModal__header-close:hover{background-color:var(--m2)}.inModal__content{padding:15px;overflow-y:auto;max-height:calc(100vh - 180px)}.inModal__header__close-button{padding:0 10px;display:flex;align-items:center;justify-content:flex-end;position:relative;flex-shrink:0;min-width:40px;cursor:pointer}.inModal__header__close-button::after{content:'\2715';line-height:18px;font-size:14px}.inModal__header--title::before{content:attr(data-text);color:var(--txt1);flex-grow:1;padding:16px 10px;opacity:.7}.inModal__header--title .inModal__header__close-button::before{content:attr(aria-label);font-size:11px;margin:0 8px;opacity:.6}.inModal__footer{background-color:var(--m3);padding:10px 15px;border-top:1px solid #e5e7eb;font-size:14px}@media screen and (min-width:641px){.inModal__container--sm{max-width:420px}.inModal__container--md{max-width:640px}.inModal__container--lg{max-width:720px}.inModal__container--xl{max-width:840px}}@media screen and (max-width:640px){.inModal{align-items:flex-end}.inModal__container{border-radius:12px 12px 0 0}}
+      /* [ inModal ] */ .inModal{display:flex;align-items:center;position:fixed;left:0;right:0;bottom:0;margin-bottom:-100%;z-index:20;transition:var(--trans-1);height:100%;opacity:0;visibility:hidden}.inModal.--open{margin-bottom:0;opacity:1;visibility:visible}.inModal__container{width:100%;max-width:540px;max-height:calc(100% - 60px);border-radius:12px;transition:inherit;z-index:3;display:flex;overflow:hidden;position:relative;margin:0 auto;box-shadow:0 5px 30px 0 rgba(0,0,0,.05);background-color:white;outline:4px solid white;border:1px solid #e5e7eb}.inModal__overlay{display:block;position:fixed;top:0;left:0;right:0;bottom:0;z-index:1;transition:var(--trans-1);background:transparent;opacity:0;visibility:hidden}.inModal.--open .inModal__overlay{opacity:1;visibility:visible;background-color:rgba(0,0,0,.3)}.inModal__box{width:100%;overflow:hidden}.inModal__header{display:flex;gap:15px;background:inherit;align-items:center;border-bottom:1px solid #e5e7eb;justify-content:space-between;padding:15px;background-image:radial-gradient(#e5e7eb 1px,transparent 1px),radial-gradient(#e5e7eb 1px,rgb(255 255 255) 1px);background-position:0 0,6px 6px;background-size:12px 12px}.inModal__header-title{background-color:white;font-weight:600}.inModal__header-close{width:26px;height:26px;display:flex;justify-content:center;align-items:center;border:1px solid #e5e7eb;border-radius:6px;background-color:white;font-size:13px;font-weight:bold;cursor:pointer}.inModal__header-close:hover{background-color:#f8f8fc}.inModal__content{padding:15px;overflow-y:auto;max-height:calc(100vh - 180px)}.inModal__header__close-button{padding:0 10px;display:flex;align-items:center;justify-content:flex-end;position:relative;flex-shrink:0;min-width:40px;cursor:pointer}.inModal__header__close-button::after{content:'\2715';line-height:18px;font-size:14px}.inModal__header--title::before{content:attr(data-text);color:var(--txt1);flex-grow:1;padding:16px 10px;opacity:.7}.inModal__header--title .inModal__header__close-button::before{content:attr(aria-label);font-size:11px;margin:0 8px;opacity:.6}.inModal__footer{background-color:var(--m3);padding:10px 15px;border-top:1px solid #e5e7eb;font-size:14px}@media screen and (min-width:641px){.inModal__container--sm{max-width:420px}.inModal__container--md{max-width:640px}.inModal__container--lg{max-width:720px}.inModal__container--xl{max-width:840px}}@media screen and (max-width:640px){.inModal{align-items:flex-end}.inModal__container{border-radius:12px 12px 0 0}}
+
+      #inModal--product:checked ~ .inModal.--product{margin-bottom:0;opacity:1;visibility:visible}
+      #inModal--product:checked ~ .inModal.--product .inModal__overlay{opacity:1;visibility:visible;background-color:rgba(0,0,0,.3)}
     </style>
   <div class="modalPopUp">
+    <input class="hidden" id="inModal--product" type="checkbox">
     <div class="inModal --product">
       <div class="inModal__container inModal__container--md">
         <div class="inModal__box">
           <div class="inModal__header">
-            <div class="inModal__header-title">SIMPAN POSTINGAN</div>
-            <div class="inModal__header-close onModal" data-modal="inBookmark">✕</div>
+            <div class="inModal__header-title">Temukan Produk Ini di Platform Favoritmu</div>
+            <label class="inModal__header-close" for="inModal--product">✕</label>
           </div>
-          <div class="inModal__content">
-            content
-          </div>
+          <div class="inModal__content"></div>
           <div class="inModal__footer">
-            <div class="flex">
-              Ketik <kbd class="kbd kbd--compact kbd--sm">?</kbd> untuk Bantuan Pencarian, atau
-              <a class="kbd kbd--compact kbd--sm" href="/search">Pergi ke Halaman Pencarian</a>
+            <div class="text-center">
+              <p class="text-sm text-gray-500 mb-2">Bagikan produk ini:</p>
+              <div class="flex justify-center gap-4">
+                <button class="text-blue-500 hover:text-blue-700" onclick="navigator.clipboard.writeText(window.location.href)">Salin Link</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="inModal__overlay onModal" data-modal="searchBar"></div>
+      <label class="inModal__overlay" for="inModal--product"></label>
     </div>
   </div>
+  <style>
+    .backdrop {background-color:rgba(0,0,0,.6);z-index:5;opacity:0;visibility:hidden;transition:all .2s ease;position:fixed;top:0;right:0;bottom:0;left:0;}.has-unique-link .backdrop {opacity:1;visibility:visible;}.highlight{z-index: 6;}
+  </style>
+  <div class="backdrop"></div>
   <svg class="hidden">
     <symbol id="i.s.tiktok" viewBox="0 0 448 512">
       <path
