--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
     </style>
   <div class="modalPopUp">
     <input class="hidden" id="inModal--product" type="checkbox">
-    <div class="inModal --product">
+    <!-- <div class="inModal --product">
       <div class="inModal__container inModal__container--md">
         <div class="inModal__box">
           <div class="inModal__header">
@@ -110,7 +110,7 @@
         </div>
       </div>
       <label class="inModal__overlay" for="inModal--product"></label>
-    </div>
+    </div> -->
 
     <!--  -->
     <div class="inModal --product">
