--- a/_includes/productItems.html
+++ b/_includes/productItems.html
@@ -32,7 +32,7 @@
           <div class="bg-gray-800 flex items-center justify-center aspect-video overflow-hidden rounded-lg">
             <img src="/assets/images/1.webp" alt="Tour Preview" class="object-cover opacity-80">
             <div class="font-semibold text-sm text-center absolute bg-white m-1.5 p-2 rounded-md bottom-0 inset-x-0 shadow-md flex items-center justify-between">
-              <h6 class="font-semibold text-base leading-7 text-black ">Trendy Jacket</h6>
+              <h6 class="font-semibold text-base leading-7 text-black ">Trendy Jacket123</h6>
               <div class="flex items-center space-x-2 text-xs">
                 <span class="font-semibold text-gray-800">2.4K</span>
                 <div class="flex items-center space-x-1 bg-yellow-400 text-white px-2 py-1 rounded-full ml-2">
