--- a/_includes/productItems.html
+++ b/_includes/productItems.html
@@ -1,72 +1,24 @@
-<div>
-  <div class="relative rounded-xl overflow-hidden p-1 border bg-white border-gray-200 hover:border-gray-300" id="{{ product.code }}">
-    <div class="relative">
-      <div class="card-deco-img relative overflow-hidden aspect-square rounded-lg bg-gray-100">
-        <img class="object-cover" alt="{{ product.name }}" src="{{ product.image | relative_url }}" loading="lazy" />
-      </div>
-      <button
-        class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-7"
-      >
-        <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.bookmark"></use></svg>
-      </button>
-      <span class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 left-1 top-1">
-        <svg class="w-3.5 h-3.5 opacity-70" width="100%" height="100%"><use xlink:href="#i.rating"></use></svg>
-        <span class="ml-1">{{ product.rating }}</span></span
-      ><span
-        class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 w-16 justify-center right-1 bottom-1"
-        >{{ product.code }}</span
-      >
-      <div class="card-deco-img-bar"></div>
+<div class="relative rounded-xl overflow-hidden p-1 border bg-white border-gray-200 hover:border-gray-300" id="{{ product.code }}">
+  <div class="relative">
+    <div class="card-deco-img relative overflow-hidden aspect-square rounded-lg bg-gray-100">
+      <img class="object-cover" alt="{{ product.name }}" src="{{ product.image | relative_url }}" loading="lazy" />
     </div>
-    <div class="p-1 -mt-4">
-      <div class="relative font-heading w-[calc(100%-4.5rem)] text-xxs text-gray-500 mb-1.5">Terjual {{ product.sales }}</div>
-      <!-- <a class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" href="//" target="_blank">{{ product.name }}</a> -->
-      <span class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" data-js="product:modal" data-link='{{ product.link | jsonify }}' data-id="{{ product.code }}">{{ product.name }}</span>
-      <div class="font-bold text-gray-900">{{ product.price }}</div>
-    </div>
+    <button class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-7">
+      <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.bookmark"></use></svg>
+    </button>
+    <span class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 left-1 top-1">
+      <svg class="w-3.5 h-3.5 opacity-70 text-yellow-400" width="100%" height="100%"><use xlink:href="#i.rating"></use></svg>
+      <span class="ml-1">{{ product.rating }}</span>
+    </span>
+    <span class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 w-16 justify-center right-1 bottom-1">{{ product.code }}</span>
+    <div class="card-deco-img-bar"></div>
   </div>
-  <div class="hidden inModal --product">
-    <div class="w-[calc(100%_-_8px)] max-w-[580px] max-h-[calc(100%_-_60px)] transition-[inherit] z-[3] relative bg-[white] overflow-hidden mx-auto my-0 p-1 rounded-xl inModal__container--md">
-      <div class="flex w-full overflow-hidden flex-col gap-4">
-        <div class="relative">
-          <div class="bg-gray-800 flex items-center justify-center aspect-video overflow-hidden rounded-lg">
-            <img src="/assets/images/1.webp" alt="Tour Preview" class="object-cover opacity-80">
-            <div class="font-semibold text-sm text-center absolute bg-white m-1.5 p-2 rounded-md bottom-0 inset-x-0 shadow-md flex items-center justify-between">
-              <h6 class="font-semibold text-base leading-7 text-black ">Trendy Jacket123</h6>
-              <div class="flex items-center space-x-2 text-xs">
-                <span class="font-semibold text-gray-800">2.4K</span>
-                <div class="flex items-center space-x-1 bg-yellow-400 text-white px-2 py-1 rounded-full ml-2">
-                  <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.rating"></use></svg>
-                  <span>4.8</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <label class="inModal__header-close absolute right-1.5 top-1.5" for="inModal--product">✕</label>
-        </div>
-        <div class="grid grid-cols-1 gap-1.5 md:grid-cols-3">
-          <button disabled="" class="block w-full text-center bg-gray-300 text-gray-500 py-2 rounded-lg cursor-not-allowed">
-            Belum tersedia di TikTok
-          </button>
-        
-          <button disabled="" class="block w-full text-center text-white py-2 rounded-lg transition bg-orange-500 hover:bg-orange-600">
-            Belum tersedia di Shopee
-          </button>
-        
-          <button disabled="" class="block w-full text-center bg-gray-300 text-gray-500 py-2 rounded-lg cursor-not-allowed">
-            Belum tersedia di Tokopedia
-          </button>
-        </div>
-        <div class="inModal__footer">
-          <div class="text-center">
-            <p class="text-sm text-gray-500 mb-2">Bagikan produk ini:</p>
-            <div class="flex justify-center gap-4">
-              <button class="text-blue-500 hover:text-blue-700" onclick="navigator.clipboard.writeText('http://127.0.0.1:4000/collections/kemeja/#COX001')">Salin Link</button>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class="p-1 -mt-4">
+    <div class="relative font-heading w-[calc(100%-4.5rem)] text-xxs text-gray-500 mb-1.5">
+      {{ site.data.setting.messages.quantitySold | replace: '[NUMBER]', product.sales }}
     </div>
-    <label class="inModal__overlay" for="inModal--product"></label>
+    <!-- <a class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" href="//" target="_blank">{{ product.name }}</a> -->
+    <span class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" data-js="product:modal" data-content='{{ product | jsonify }}'>{{ product.name }}</span>
+    <div class="font-bold text-gray-900">{{ product.price }}</div>
   </div>
 </div>
