--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,7 +117,7 @@
       <div class="w-[calc(100%_-_8px)] max-w-md transition-[inherit] z-[3] relative bg-[white] overflow-hidden mx-auto my-0 p-1 rounded-xl">
         <div class="flex w-full overflow-hidden flex-col gap-4">
           <div class="relative">
-            <div class="bg-gray-800 flex items-center justify-center aspect-square overflow-hidden rounded-lg">
+            <div class="bg-gray-800 flex items-center justify-center aspect-square overflow-hidden rounded-lg" style="aspect-ratio:3/2;">
               <img data-js="modal:product__header-image" src="data:image/png;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="{{ site.title }}" class="object-cover opacity-80">
               <div class="font-semibold text-sm text-center absolute bg-white m-1.5 p-2 gap-x-8 rounded-md bottom-0 inset-x-0 shadow-md flex items-center justify-between">
                 <h6 class="font-semibold text-base leading-7 text-black truncate" data-js="modal:product__header-title"></h6>
